--- a/PRN222/PRN222/PRN222.csproj
+++ b/PRN222/PRN222/PRN222.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Teacher\" />
+    <Folder Include="Views\Student\" />
+  </ItemGroup>
+
 </Project>
